--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,9 +14,14 @@ jobs:
       with:
         python-version: '3.10'
         
-    - name: Install dependencies
+    - name: Install system dependencies
+      run: |
+        brew install mpich
+        
+    - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install mpi4py
         pip install -e ".[dev]"
         
     - name: Run tests
@@ -27,4 +32,4 @@ jobs:
       run: |
         black --check .
         isort --check-only .
-        mypy src/ 
+        mypy src/
