--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,35 +19,15 @@ jobs:
         brew install mpich
         pip install -e ".[dev]"
         
-    - name: Core tests
+    - name: Run tests
       run: |
-        # Basic system verification
+        # Basic verification and core tests
         python scripts/verify_setup.py --ci-mode
-        
-        # Core functionality test
         python scripts/test_network.py --local-only
-        
-        # Run essential unit tests
         pytest tests/core -v
         
-    - name: Check basic structure
+    - name: Check project structure
       run: |
-        # Essential files
-        test -f setup.py
-        test -f requirements.txt
-        test -f README.md
-        test -f LICENSE
-        
-        # Core directories
         test -d src/models
         test -d src/distributed
         test -d tests
-        test -d examples
-        
-    - name: Verify documentation
-      run: |
-        # Check README and examples
-        python scripts/check_docs.py --basic-check
-        
-        # Verify example notebook exists
-        test -f examples/distributed_training.ipynb
