--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,65 @@
 # Core ML Dependencies
-mlx>=0.0.8
-transformers>=4.36.0
-datasets>=2.15.0
-safetensors>=0.4.0
+mlx>=0.20.0 
 numpy>=1.24.0
-torch>=2.1.0  # For data preprocessing only
+transformers>=4.36.0
+safetensors>=0.4.0
+datasets>=2.15.0
+torch>=2.1.0
 
 # Distributed Training
 mpi4py>=3.1.4
 paramiko>=3.3.1
+pyzmq>=25.1.1
+asyncssh>=2.14.0  # Used in network_utils
+iperf3>=0.1.11  # For network performance testing
 
-# Monitoring & Visualization
-fastapi>=0.104.0
+# Storage & IO
+aiofiles>=23.2.1  # Used in checkpoint_utils
+aiosqlite>=0.19.0  # Used in checkpoint_utils
+xxhash>=3.4.1  # Used in data_utils
+
+# API & Serving
+fastapi>=0.104.0  # Used in inference_server
 uvicorn>=0.24.0
-plotly>=5.18.0
-dash>=2.14.0
-psutil>=5.9.0
+pydantic>=2.5.0
 
-# Testing & Development
+# Utilities
+tqdm>=4.66.1  
+pyyaml>=6.0.1
+psutil>=5.9.0
+huggingface-hub>=0.19.4
+metal-sdk>=0.5.0  # For Metal GPU monitoring
+
+# Monitoring (optional)
+# Install with: pip install -r requirements.txt[monitoring]
+fastapi>=0.104.0
+psutil>=5.9.0
+plotly>=5.18.0 
+dash>=2.14.0
+dash-core-components>=2.0.0
+dash-html-components>=2.0.0
+pandas>=2.1.0
+
+# Development Dependencies (optional)
+# Install with: pip install -r requirements.txt[dev]
 pytest>=7.4.3
 pytest-asyncio>=0.21.1
 pytest-cov>=4.1.0
 black>=23.11.0
 isort>=5.12.0
+mypy>=1.7.0
+pylint>=3.0.0
 
-# Utilities
-tqdm>=4.66.1
-pyyaml>=6.0.1
-huggingface-hub>=0.19.4
-iperf3>=0.1.11
+# Type Stubs (optional)
+types-PyYAML>=6.0.12
+types-tqdm>=4.65.0
+types-paramiko>=3.3.1
+types-psutil>=5.9.0
+types-aiofiles>=23.2.0
+types-asyncssh>=2.13.0
+
+# Documentation (optional)
+# Install with: pip install -r requirements.txt[docs]
+sphinx>=7.2.0
+sphinx-rtd-theme>=1.3.0
+sphinx-autodoc-typehints>=1.25.0
