--- a/requirements.txt
+++ b/requirements.txt
@@ -1,54 +1,54 @@
 # Core ML Dependencies
-mlx>=0.20.0 
-numpy>=1.24.0
-transformers>=4.36.0
-safetensors>=0.4.0
-datasets>=2.15.0
-torch>=2.1.0
+mlx==0.20.0 
+numpy==1.24.3
+transformers==4.36.2
+safetensors==0.4.1
+datasets==2.15.0
+torch==2.1.2
 
 # Distributed Training
-mpi4py>=3.1.4
-paramiko>=3.3.1
-pyzmq>=25.1.1
-asyncssh>=2.14.0  # Used in network_utils
-iperf3>=0.1.11  # For network performance testing
+mpi4py==3.1.5
+paramiko==3.3.1
+pyzmq==25.1.1
+asyncssh==2.14.1  # Used in network_utils
+iperf3==0.1.11  # For network performance testing
 
 # Storage & IO
-aiofiles>=23.2.1  # Used in checkpoint_utils
-aiosqlite>=0.19.0  # Used in checkpoint_utils
-xxhash>=3.4.1  # Used in data_utils
+aiofiles==23.2.1  # Used in checkpoint_utils
+aiosqlite==0.19.0  # Used in checkpoint_utils
+xxhash==3.4.1  # Used in data_utils
 
 # API & Serving
-fastapi>=0.104.0
-uvicorn>=0.24.0
-pydantic>=2.5.0
+fastapi==0.104.1
+uvicorn==0.24.0
+pydantic==2.5.2
 
 # Utilities
-tqdm>=4.66.1
-pyyaml>=6.0.1
-psutil>=5.9.0
-huggingface-hub>=0.19.4
-metal-sdk>=0.5.0
+tqdm==4.66.1
+pyyaml==6.0.1
+psutil==5.9.6
+huggingface-hub==0.19.4
+metal-sdk==0.5.0
 
 # Monitoring & Visualization
-plotly>=5.18.0
-dash>=2.14.0
-dash-core-components>=2.0.0
-dash-html-components>=2.0.0
-pandas>=2.1.0
+plotly==5.18.0
+dash==2.14.1
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+pandas==2.1.3
 
 # Testing & Development
-pytest>=7.4.3
-pytest-asyncio>=0.21.1
-pytest-cov>=4.1.0
-black>=23.11.0
-isort>=5.12.0
-mypy>=1.7.0
-pylint>=3.0.0
+pytest==7.4.3
+pytest-asyncio==0.21.1
+pytest-cov==4.1.0
+black==23.11.0
+isort==5.12.0
+mypy==1.7.1
+pylint==3.0.2
 
 # Type Stubs
-types-PyYAML>=6.0.12
-types-tqdm>=4.65.0
-types-paramiko>=3.3.1
-types-psutil>=5.9.0
-types-aiofiles>=23.2.0
+types-PyYAML==6.0.12.12
+types-tqdm==4.65.0.1
+types-paramiko==3.3.1
+types-psutil==5.9.0
+types-aiofiles==23.2.0
